refactor(Gallery): changing Gallery app navigation

--- a/src/Huskui.Gallery/MainWindow.axaml
+++ b/src/Huskui.Gallery/MainWindow.axaml
@@ -163,7 +163,7 @@
         <!-- Main Content -->
         <Grid Grid.Column="1">
             <!-- Content Frame -->
-            <TransitioningContentControl Name="ContentFrame" />
+            <husk:Frame Name="ContentFrame" />
 
             <!-- Settings Overlay -->
             <Border Background="{StaticResource OverlaySolidBackgroundBrush}"
