feat: add Minimal Step Control theme

--- a/src/Huskui.Avalonia/Controls/StepControl.axaml
+++ b/src/Huskui.Avalonia/Controls/StepControl.axaml
@@ -8,4 +8,9 @@
             </ControlTemplate>
         </Setter>
     </ControlTheme>
+
+    <ControlTheme x:Key="MinimalStepControlTheme" TargetType="husk:StepControl"
+                  BasedOn="{StaticResource {x:Type husk:StepControl}}">
+        <Setter Property="ItemContainerTheme" Value="{StaticResource MinimalStepItemTheme}" />
+    </ControlTheme>
 </ResourceDictionary>
