feat(Controls): Gemini made drawer (WIP)

--- a/src/Huskui.Avalonia/Controls/AppWindow.axaml
+++ b/src/Huskui.Avalonia/Controls/AppWindow.axaml
@@ -79,6 +79,7 @@
                                     </ItemsPanelTemplate>
                                 </local:GrowlHost.ItemsPanel>
                             </local:GrowlHost>
+                            <local:DrawerHost Name="{x:Static local:AppWindow.PART_DrawerHost}" />
                         </VisualLayerManager.ChromeOverlayLayer>
                         <Panel Margin="{Binding $parent[Window].OffScreenMargin}">
                             <ContentPresenter
